= HEAD

* Document how to allow per-branch HTML escaping of <%= %> in the view_options plugin (jeremyevans)

* Add :include_request option to json and json_parser plugins to include request in :serializer/:parser call (janko-m) (#26)

* Optimize template cache lookup in render plugin when :cache_key is given (jeremyevans)

* Add :engine_opts option to render plugin, for specifying per-template engine options (jeremyevans)

* The render plugin and render/view :ext option is now replaced by the :engine option (jeremyevans)

* Add path_rewriter plugin, for rewriting paths before routing (jeremyevans)

* Add :cache_key option to render/view to explicitly set the template cache key (jeremyevans)

* Don't cache templates if :template_block is given to render/view, unless :cache=>true is used  (jeremyevans)

* Add :cache option to render/view to force caching or not caching the template (jeremyevans)

* Avoid rehashing hashes at runtime in plugins (jeremyevans)

* Add heartbeat plugin for heartbeat support (jeremyevans)

* Support :serializer option in json plugin (janko-m) (#21)

* Add json_parser plugin, for parsing request bodies in JSON format (jeremyevans)

= 2.2.0 (2015-04-13)

* Add :escaper render plugin option to support custom escaping of <%= %> tags when :escape is used (jeremyevans)

* Add :escape_safe_classes render plugin option, to not escape certain string subclasses when :escape is used (jeremyevans)

* Split partials method from padrino_render plugin into partials plugin (kematzy) (#19)

* Add shared_vars plugin, for sharing variables between multiple Roda apps (jeremyevans)

* Add delay method to chunked plugin, for delaying a block execution until right before content template rendering (jeremyevans)

* Have default Content-Type header when using the default_headers plugin (jeremyevans)

* Add :by_name option to the path plugin, for registering classes by name, useful when reloading code (jeremyevans)
