@@ -1,5 +1,7 @@
 = HEAD
 
+* Add precompiled_templates plugin, for saving memory when using a forking webserver (jeremyevans)
+
 * Document how to allow per-branch HTML escaping of <%= %> in the view_options plugin (jeremyevans)
 
 * Add :include_request option to json and json_parser plugins to include request in :serializer/:parser call (janko-m) (#26)
